--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -159,3 +159,10 @@
   howpublished = {\url{https://www.youtube.com/watch?v=IrkNZG8MJ64}},
   note = {Roofline performance model for CPUs and GPUs.}
 }
+@misc{rtx_ada_specs,
+  author = {NVIDIA Corporation},
+  title = {NVIDIA RTX 4000 Ada Generation Datasheet},
+  year = {2023},
+  url = {https://resources.nvidia.com/en-us-briefcase-for-datasheets/rtx-4000-ada-datashe-1?ncid=no-ncid},
+  note = {Official datasheet for the RTX 4000 Ada}
+}
