--- a/posts/2025-07-20-gpu-puzzles-p2.qmd
+++ b/posts/2025-07-20-gpu-puzzles-p2.qmd
@@ -1269,7 +1269,8 @@ This gives us a **1.8× speedup** from shared memory optimization, but we're sti
 
 <details closed>
 <summary> **Plot Code** </summary>
-```{.py filename="roofline_plot.py"}
+
+```{.py filename='roofline_plot.py'}
 # /// script
 # dependencies = [
 #   "matplotlib",
@@ -1281,18 +1282,15 @@ This gives us a **1.8× speedup** from shared memory optimization, but we're sti
 import matplotlib.pyplot as plt
 import numpy as np
 
-# Hardware specifications
 peak_compute = 26.7 * 1000  # Convert to GFLOPS
 peak_bandwidth = 360  # GB/s
 critical_intensity = peak_compute / peak_bandwidth
 
-# Kernel data points
 kernels = [
     {"name": "Naive 3×3", "intensity": 0.25, "performance": 90, "color": "#f39c12"},
     {"name": "Shared 3×3", "intensity": 0.45, "performance": 162, "color": "#27ae60"}
 ]
 
-# Generate roofline data
 def generate_roofline_data():
     # Memory-bound region
     memory_intensities = np.arange(0.01, critical_intensity, 0.05)
@@ -1304,25 +1302,19 @@ def generate_roofline_data():
 
     return memory_intensities, memory_performance, compute_intensities, compute_performance
 
-# Create the plot
 fig, ax = plt.subplots(figsize=(10, 6.5))
 
-# Explicitly set both axes to log_10 scale
 ax.set_xscale('log', base=10)
 ax.set_yscale('log', base=10)
 
-# Generate roofline data
 mem_i, mem_p, comp_i, comp_p = generate_roofline_data()
 
-# Plot roofline curves
 ax.loglog(mem_i, mem_p, color="#e74c3c", linewidth=3, label="Memory-bound")
 ax.loglog(comp_i, comp_p, color="#3498db", linewidth=3, label="Compute-bound")
 
-# Guide lines
 ax.axhline(y=peak_compute, color="#3498db", linestyle="--", alpha=0.7, linewidth=1)
 ax.axvline(x=critical_intensity, color="#999", linestyle="--", alpha=0.7, linewidth=1)
 
-# Plot kernel points
 for kernel in kernels:
     ax.loglog(kernel["intensity"], kernel["performance"],
              'o', color=kernel["color"], markersize=8,
@@ -1342,25 +1334,21 @@ for kernel in kernels:
                fontsize=11, fontweight="bold", ha="center",
                bbox=dict(boxstyle="round,pad=0.3", facecolor="white", alpha=0.8))
 
-# Region labels - move Memory-bound to center and away from kernel dots
 ax.text(1.5, peak_bandwidth * 1.5, "Memory-bound",
         color="#e74c3c", fontsize=14, fontweight="bold", ha="center")
 ax.text(200, peak_compute * 0.8, "Compute-bound",
         color="#3498db", fontsize=14, fontweight="bold")
 
-# Critical intensity annotation
 ax.text(critical_intensity * 1.3, peak_compute * 1.1,
         f"I_crit = {critical_intensity:.1f}",
         color="#f39c12", fontsize=12, fontweight="bold")
 
-# Formatting
 ax.set_xlim(0.1, 1000)
 ax.set_ylim(10, 30000)
 ax.set_xlabel("Operational Intensity (FLOP/byte) - Log_10 Scale", fontsize=12)
 ax.set_ylabel("Performance (GFLOP/s) - Log_10 Scale", fontsize=12)
 ax.grid(True, alpha=0.3)
 
-# Create custom legend for kernels
 legend_elements = [plt.Line2D([0], [0], marker='o', color='w',
                              markerfacecolor=k["color"], markersize=8,
                              label=k["name"], markeredgecolor="#333")
@@ -1368,10 +1356,8 @@ legend_elements = [plt.Line2D([0], [0], marker='o', color='w',
 ax.legend(handles=legend_elements, loc="lower right")
 
 plt.tight_layout()
-# plt.show()
 plt.savefig('./mojo_gpu_puzzles/p14_roofline_naive_and_shared.png', bbox_inches='tight')
 
-# Print performance metrics
 print("Performance Analysis:")
 print("-" * 40)
 for kernel in kernels:
@@ -1388,6 +1374,4 @@ for kernel in kernels:
 
 1. **Intensity grows with matrix size** — For naive $N \times N$ GEMM: $I = \frac{N^3}{4N^2} = \frac{N}{4}$ FLOP/byte
 2. **Small kernels are bandwidth-bound** — Even perfect caching can't reach the 74 FLOP/byte crossover until $N \approx 300$
-3. **Shared memory helps, but only up to the ridge** — Further speedups require compute-side tuning (tensor cores, ILP, etc.)
-
-This 3×3 case illustrates the arithmetic-vs-bandwidth trade-off without drowning in large-matrix algebra.
+3. **Shared memory helps, but only up to the ridge** - Further speedups require compute-side tuning (tensor cores, ILP, etc.)
